# git-credential-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  azure-pipelines.yml
examples/: git-credential-env.rs
src/: lib.rs
