[package]
name = "git-credential"
version = "0.1.1"
authors = ["Pascal Bach <pascal.bach@nextrem.ch>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/bachp/git-credential-rs"
description = "Provides types that help to implement git-credential helpers."

[dependencies]
url = "2.1.1"
log = "0.4.8"
snafu = "0.6.6"

[dev-dependencies]
doc-comment = "0.3.3"
